# cheeper_api

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  state.rs
src/crates/application/: Cargo.toml
src/crates/application/src/: lib.rs
src/crates/application/src/dto/: mod.rs
src/crates/application/src/dto/authentication/: authenticate_dto.rs  mod.rs
src/crates/application/src/dto/messages/: get_message_dto.rs  list_messages_from_interval_dto.rs  mod.rs  send_message_dto.rs
src/crates/application/src/dto/users/: create_user_dto.rs  follow_user_dto.rs  get_friend_candidate_dto.rs  get_friends_count_dto.rs  get_user_dto.rs  list_friends_dto.rs  (+2 more)
src/crates/application/src/hashing/: mod.rs  password_hasher.rs
src/crates/application/src/repositories/: messages_repository.rs  mod.rs  users_repository.rs
src/crates/application/src/services/: authentication_service.rs  messages_service.rs  mod.rs  users_service.rs
src/crates/domain/: Cargo.toml
src/crates/domain/src/: lib.rs
src/crates/domain/src/models/: message.rs  user.rs
src/crates/domain/src/value_objects/: interest.rs  message_id.rs  mod.rs  user_id.rs
src/crates/errors/: Cargo.toml
src/crates/errors/src/: lib.rs
src/crates/infrastructure/: Cargo.toml
src/crates/infrastructure/src/: database.rs  lib.rs
src/crates/infrastructure/src/hashing/: argon2_password_hasher.rs  mod.rs
src/crates/infrastructure/src/repositories/: messages_repository.rs  mod.rs  users_repository.rs
src/guards/: auth_guard.rs  mod.rs
src/router/: authentication.rs  friends.rs  messages.rs  mod.rs  users.rs
